--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -11,13 +11,12 @@ server {
     index index.php;
 
     location / {
-        try_files $uri /index.php$is_args$args;
+        try_files $uri $uri/ /index.php?$args;
     }
 
     location ~ \.php$ {
-        fastcgi_pass wordpress-inception:9000;
-        fastcgi_index index.php;
         include fastcgi_params;
+        fastcgi_pass wordpress-inception:9000;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 }
