--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -8,7 +8,7 @@ server {
     ssl_protocols       TLSv1.2 TLSv1.3;
 
     root /var/www/html;
-    index index.php;
+    index index.php index.html;
 
     location / {
         try_files $uri $uri/ /index.php?$args;
